# drasyl

./: .codeclimate.yml  .dockerignore  .editorconfig  .gitattributes  .gitignore  .gitlab-ci.yml  .java-version  .mailmap  404.html  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  CONTRIUBTION.md  Dockerfile  Dockerfile.cross_compile_linux_aarch_64  LICENSE  README.md  RELEASE.md  SANE.xml  api-changes.json  broker.yml  checkstyle.xml  ci_settings.xml  consumer.yml  coverage-jacoco.sh  docker-compose-drasyl.yml  docker-compose.cross-compile.yml  docker-compose.yml  dockerignore  groups-manager.sqlite  index.html  jtasklet-start.sh  jtasklet.Dockerfile  jtasklet.sh  lsif-java.json  magic-numbers.md  main.c  main.py  mvnw  network-circle.lua  (+28 more)
.github/: dependabot.yml  install-graal.sh
.gitlab/: prepare-auto-deploy-values.yaml.sh  prepare-environment-docker-compose.sh
.gitlab-ci/: Deployments.gitlab-ci.yml  Docker.gitlab-ci.yml  Maven.gitlab-ci.yml  VisualCoverage.gitlab-ci.yml  coverage-jacoco.sh  mvn.gitlab-ci.yml  mvnreplace.sh
.run/: CLI node.run.xml  CLI_ arq receive.run.xml  CLI_ arq send.run.xml  CLI_ node.run.xml  CLI_ receive.run.xml  CLI_ receiver.run.xml  CLI_ sdo controller (star).run.xml  CLI_ sdo controller.run.xml  CLI_ sdo node (#1).run.xml  CLI_ sdo node (#2).run.xml  CLI_ sdon controller.run.xml  CLI_ sdon node (#2).run.xml  CLI_ send.run.xml  CLI_ sender.run.xml  CLI_ wormhole receive.run.xml  CLI_ wormhole send.run.xml  Check API.run.xml  Check Code Style.run.xml  Cli.run.xml  ConnectionHandshakeHandlerIT.run.xml  ConnectionHandshakeHandlerTest.run.xml  Integration Tests.run.xml  JTasklet_ broker.run.xml  JTasklet_ compute (europeanOptionMC).run.xml  JTasklet_ compute (primes).run.xml  JTasklet_ consume.run.xml  JTasklet_ grey filter.run.xml  JTasklet_ vm.run.xml  Performance Tests.run.xml  Unit Tests.run.xml  Whole project.run.xml
akka-p2p/: README.md  pom.xml
akka-p2p-integration-tests/: pom.xml
all/: pom.xml
chart/: Chart.yaml  values.yaml
cli/: index.html
configuration/: index.html
contributing/: index.html
core/: pom.xml
doc/: README.md
docs/: Makefile  README.md  docs.Dockerfile  mkdocs.yml  requirements.txt
drasyl-all/: pom.xml
drasyl-bom/: pom.xml
drasyl-cli/: README.md  pom.xml
drasyl-core/: pom.xml
drasyl-crypto/: pom.xml
drasyl-examples/: README.md  example-activity-pattern.json  pom.xml
drasyl-extras/: ConnectionHandler.ipynb  pom.xml
drasyl-frontend/: README.md  babel.config.js  package-lock.json  package.json  pom.xml
drasyl-integration-tests/: pom.xml
drasyl-jtasklet/: README.md  pom.xml
drasyl-shared-library/pypi/: LICENSE  README.md  pyproject.toml  setup.py
drasyl-shared-library/pypi/src/drasyl/: __init__.py  graal_isolate.h  graal_isolate_dynamic.h  libdrasyl.h  libdrasyl.py  libdrasyl_dynamic.h  version.py
dtun/: CMakeLists.txt  dtun.c  dtun.h
(+4136 files in other folders)
